--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.0",
